add: refactor : Header Profile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    
+
     <!-- CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
   
@@ -19,7 +19,7 @@
     
     <div class="profile">
       <img src="assets/img/profile.jpg" alt="..." width="150px">
-      <h1 class="profile-title">Andriel Marques</h1>
+      <h1>Andriel Marques</h1>
       <div class="social-links">
         <a href="#" class="whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
         <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
@@ -30,8 +30,6 @@
 
 </header><!-- End Header -->
   
-
-
 
  <!-- FontAwesome-->
  <script src="https://kit.fontawesome.com/eac1154f77.js" crossorigin="anonymous"></script>
