--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
     <!-- CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
   
-  <title>Document</title>
+  <title>Portifolio</title>
 </head>
 <body>
 
@@ -18,7 +17,7 @@
   <header id="header">
     
     <div class="profile">
-      <img src="assets/img/profile.jpg" alt="..." width="150px">
+      <img src="assets/img/profile.jpg" alt="...">
       <h1>Andriel Marques</h1>
       <div class="social-links">
         <a href="#" class="whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
@@ -28,9 +27,21 @@
       </div>
     </div>
 
+    <!-- .nav-menu -->
+    <nav id="navbar">
+      <ul>
+        <li><a href="#home" class="nav-link scrollto active"> <i class="fa-solid fa-house"></i> <span>Inicio</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"> <i class="fa-solid fa-user"></i> <span>Sobre mim</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"> <i class="fa-solid fa-file"></i> <span>Resumo</span></a></li>
+        <li><a href="#project" class="nav-link scrollto"> <i class="fa-solid fa-briefcase"></i> <span>Projetos</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"> <i class="fa-solid fa-envelope"></i> <span>Contato</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+  </div>
 </header><!-- End Header -->
   
-
+  <!-- JS File -->
+  <script src="assets/js/main.js"></script>
  <!-- FontAwesome-->
  <script src="https://kit.fontawesome.com/eac1154f77.js" crossorigin="anonymous"></script>
 </body>
