--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <!-- CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
-  
+
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
+  <!-- CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
   <title>Portifolio</title>
 </head>
+
 <body>
 
   <!-- ======= Header ======= -->
   <header id="header">
-    
+
     <div class="profile">
       <img src="assets/img/profile.jpg" alt="...">
       <h1>Andriel Marques</h1>
@@ -30,19 +34,24 @@
     <!-- .nav-menu -->
     <nav id="navbar">
       <ul>
-        <li><a href="#home" class="nav-link scrollto active"> <i class="fa-solid fa-house"></i> <span>Inicio</span></a></li>
+        <li><a href="#home" class="nav-link scrollto active"> <i class="fa-solid fa-house"></i> <span>Inicio</span></a>
+        </li>
         <li><a href="#about" class="nav-link scrollto"> <i class="fa-solid fa-user"></i> <span>Sobre mim</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"> <i class="fa-solid fa-file"></i> <span>Resumo</span></a></li>
-        <li><a href="#project" class="nav-link scrollto"> <i class="fa-solid fa-briefcase"></i> <span>Projetos</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"> <i class="fa-solid fa-envelope"></i> <span>Contato</span></a></li>
+        <li><a href="#project" class="nav-link scrollto"> <i class="fa-solid fa-briefcase"></i>
+            <span>Projetos</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"> <i class="fa-solid fa-envelope"></i> <span>Contato</span></a>
+        </li>
       </ul>
     </nav><!-- .nav-menu -->
-  </div>
-</header><!-- End Header -->
-  
+    </div>
+  </header><!-- End Header -->
+
+
   <!-- JS File -->
   <script src="assets/js/main.js"></script>
- <!-- FontAwesome-->
- <script src="https://kit.fontawesome.com/eac1154f77.js" crossorigin="anonymous"></script>
+  <!-- FontAwesome-->
+  <script src="https://kit.fontawesome.com/eac1154f77.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
