--- a/index.html
+++ b/index.html
@@ -2,56 +2,56 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
-  <!-- CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-
-  <title>Portifolio</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Css File -->
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Personal Portifolio Web</title>
 </head>
 
-<body>
+<body>  
+    
+      <!-- ======= Header ======= -->
+    <header>
 
-  <!-- ======= Header ======= -->
-  <header id="header">
+        <div class="profile">
+            <img src="./assets//img/profile.jpg">
+            <h1>Andriel Marques</h1>
+            <div class="social-icons">
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+        </div>
 
-    <div class="profile">
-      <img src="assets/img/profile.jpg" alt="...">
-      <h1>Andriel Marques</h1>
-      <div class="social-links">
-        <a href="#" class="whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#" class="github"><i class="fa-brands fa-github"></i></a>
-        <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-      </div>
-    </div>
+        <nav id="navbar" class="nav-menu navbar">
+            <ul>
+              <li><a href="#home" class="nav-link scrollto active"><i class="fa-solid fa-house"></i> <span>Home</span></a></li>
+              <li><a href="#about" class="nav-link scrollto"><i class="fa-solid fa-user"></i> <span>About</span></a></li>
+              <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-file"></i> <span>Resume</span></a></li>
+              <li><a href="#project" class="nav-link scrollto"><i class="fa-solid fa-briefcase"></i> <span>Portfolio</span></a></li>
+              <li><a href="#contact" class="nav-link scrollto"><i class="fa-solid fa-envelope"></i> <span>Contact</span></a></li>
+            </ul>
+          </nav>
 
-    <!-- .nav-menu -->
-    <nav id="navbar">
-      <ul>
-        <li><a href="#home" class="nav-link scrollto active"> <i class="fa-solid fa-house"></i> <span>Inicio</span></a>
-        </li>
-        <li><a href="#about" class="nav-link scrollto"> <i class="fa-solid fa-user"></i> <span>Sobre mim</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"> <i class="fa-solid fa-file"></i> <span>Resumo</span></a></li>
-        <li><a href="#project" class="nav-link scrollto"> <i class="fa-solid fa-briefcase"></i>
-            <span>Projetos</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"> <i class="fa-solid fa-envelope"></i> <span>Contato</span></a>
-        </li>
-      </ul>
-    </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
+        <!-- ======= Mobile nav toggle button ======= -->
+        <i class="fa-solid fa-bars" id="MenuBtn"></i>
+
+    </header>
+     <!-- ======= Header ======= -->
+    
 
 
-  <!-- JS File -->
-  <script src="assets/js/main.js"></script>
-  <!-- FontAwesome-->
-  <script src="https://kit.fontawesome.com/eac1154f77.js" crossorigin="anonymous"></script>
+    <!-- JS File & Scripts-->
+    <script src="./assets/js/main.js"></script>
+
+    <!-- FontAwesome-->
+    <script src="https://kit.fontawesome.com/eac1154f77.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
