--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
         <nav id="navbar" class="nav-menu navbar">
             <ul>
-              <li><a href="#home" class="nav-link scrollto active"><i class="fa-solid fa-house"></i> <span>Home</span></a></li>
-              <li><a href="#about" class="nav-link scrollto"><i class="fa-solid fa-user"></i> <span>About</span></a></li>
-              <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-file"></i> <span>Resume</span></a></li>
-              <li><a href="#project" class="nav-link scrollto"><i class="fa-solid fa-briefcase"></i> <span>Portfolio</span></a></li>
-              <li><a href="#contact" class="nav-link scrollto"><i class="fa-solid fa-envelope"></i> <span>Contact</span></a></li>
+              <li><a href="#home" class="nav-link scrollto active"><i class="fa-solid fa-house"></i> <span>Inicio</span></a></li>
+              <li><a href="#about" class="nav-link scrollto"><i class="fa-solid fa-user"></i> <span>Sobre mim</span></a></li>
+              <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-file"></i> <span>Resumo</span></a></li>
+              <li><a href="#project" class="nav-link scrollto"><i class="fa-solid fa-briefcase"></i> <span>Projeto</span></a></li>
+              <li><a href="#contact" class="nav-link scrollto"><i class="fa-solid fa-envelope"></i> <span>Contato</span></a></li>
             </ul>
           </nav>
 
