add: feat: AboutSection

--- a/index.html
+++ b/index.html
@@ -88,6 +88,44 @@
             </div>
         </section>
 
+         <!--Resume Section-->
+         <section id="resume">
+            <h1 class="title">Resumo</h1>
+            <div class="divider"></div>
+            <p> Conhecimentos & Habilidades.</p> 
+
+            <div class="resume-row">
+                <!--left col-->
+                <div class="resume-cols">
+                    <div class="my-info">
+                        <h3>Spread Fullstack Developer</h3>
+                        <p>
+                            Aprendi sobre como criar aplicações web dinâmicas,
+                            trabalhar com diferentes tecnologias, 
+                            como React, Node.js e MongoDB.
+                        </p>
+                        <div> <i> > </i> <a href="https://www.dio.me/certificate/C7B1A39A/share"
+                                target="_blank">Certificado</a> - 22 fev 2023</div>
+                    </div>
+                </div>
+
+                <!--rigth col-->
+                <div class="resume-cols">
+                    <div class="my-info">
+                        <h3> Impulso JavaScript Evolution</h3>
+                        <p>
+                            Completar este programa foi
+                            uma experiência  que me permitiu 
+                            adquirir habilidades valiosas em JavaScript.
+                        </p>
+                        <div> <i> > </i><a href="https://www.dio.me/certificate/68B013E8/share"
+                                target="_blank">Certificado</a> - 17 fev 2023</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
     <!-- ======= Main ======= -->
 
