add: feat: SkillSection

--- a/index.html
+++ b/index.html
@@ -125,6 +125,21 @@
             </div>
         </section>
 
+         <!-- ======= Skill ======= -->
+        <section id="skill">
+            <h1 class="title">Linguagens</h1>
+            <div class="divider"></div>
+            <p>Linguagens que atualmente possuo conhecimentos.</p>
+            <div class="linguage">
+                <i class="fa-brands fa-html5" id="html5"> html</i>
+                <i class="fa-brands fa-css3-alt" id="css3"> css3</i>
+                <i class="fa-brands fa-js" id="js"> js</i>
+                <i class="fa-brands fa-node-js" id="node-js"> node js</i>
+                <i class="fa-brands fa-react" id="react"> react</i>
+                <i class="fa-brands fa-envira" id="mongodb"> mongodb</i>
+            </div>
+        </section>
+        
 
     </main>
     <!-- ======= Main ======= -->
