add: style : Letters

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <section id="skill">
             <h1 class="title">Linguagens</h1>
             <div class="divider"></div>
-            <p>Linguagens que atualmente possuo conhecimentos.</p>
+            <p>Linguagens que atualmente possuo conhecimento.</p>
             <div class="linguage">
                 <i class="fa-brands fa-html5" id="html5"> html</i>
                 <i class="fa-brands fa-css3-alt" id="css3"> css3</i>
