add: feat: ProjectSection

--- a/index.html
+++ b/index.html
@@ -139,8 +139,111 @@
                 <i class="fa-brands fa-envira" id="mongodb"> mongodb</i>
             </div>
         </section>
-        
 
+        <!-- ======= Project Section ======= -->
+        <section id="project">
+            <h1 class="title">Projetos</h1>
+            <div class="divider"></div>
+            <p class="sub-para"> Projetos construidos 
+              com desenvolvimento ultilizando linguagens que atualmente possuo conhecimentos. 
+            </p>
+
+            <div class="pro-row">
+
+                <!--item 1-->
+                <div class="pro-item">
+                    <div class="pro-img">
+                        <img src="./assets/img/wallpaper.jpg" alt="..." >
+                    </div>
+
+                    <div class="pro-info">
+                        <h4>WordPress</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Earum sit assumenda porro
+                        </p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+
+                <!--item 2-->
+                <div class="pro-item">
+                    <div class="pro-img">
+                        <img src="./assets/img/backgound-img2.jpg" alt="...">
+                    </div>
+
+                    <div class="pro-info">
+                        <h4>WordPress</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Earum sit assumenda porro
+                        </p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+
+                <!--item 3-->
+                <div class="pro-item">
+                    <div class="pro-img">
+                        <img src="./assets/img/backgound-img2.jpg" alt="...">
+                    </div>
+
+                    <div class="pro-info">
+                        <h4>WordPress</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Earum sit assumenda porro
+                        </p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+
+                    </div>
+                </div>
+
+                <!--item 4-->
+                <div class="pro-item">
+                    <div class="pro-img">
+                        <img src="./assets/img/wallpaper.jpg" alt="..." >
+                    </div>
+
+                    <div class="pro-info">
+                        <h4>WordPress</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Earum sit assumenda porro
+                        </p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+
+                    </div>
+                </div>
+
+                <!--item 4-->
+                <div class="pro-item">
+                    <div class="pro-img">
+                        <img src="./assets/img/backgound-img2.jpg" alt="...">
+                    </div>
+
+                    <div class="pro-info">
+                        <h4>WordPress</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Earum sit assumenda porro
+                        </p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+
+                <!--item 6-->
+                <div class="pro-item">
+                    <div class="pro-img">
+                        <img src="./assets/img/backgound-img2.jpg" alt="...">
+                    </div>
+
+                    <div class="pro-info">
+                        <h4>WordPress</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Earum sit assumenda porro
+                        </p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
     <!-- ======= Main ======= -->
 
