add: feat: ProjectSection MediaQuery

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <!--item 2-->
                 <div class="pro-item">
                     <div class="pro-img">
-                        <img src="./assets/img/backgound-img2.jpg" alt="...">
+                        <img src="./assets/img/wallpaper.jpg" alt="...">
                     </div>
 
                     <div class="pro-info">
@@ -183,7 +183,7 @@
                 <!--item 3-->
                 <div class="pro-item">
                     <div class="pro-img">
-                        <img src="./assets/img/backgound-img2.jpg" alt="...">
+                        <img src="./assets/img/wallpaper.jpg" alt="...">
                     </div>
 
                     <div class="pro-info">
@@ -215,7 +215,7 @@
                 <!--item 4-->
                 <div class="pro-item">
                     <div class="pro-img">
-                        <img src="./assets/img/backgound-img2.jpg" alt="...">
+                        <img src="./assets/img/wallpaper.jpg" alt="...">
                     </div>
 
                     <div class="pro-info">
@@ -230,7 +230,7 @@
                 <!--item 6-->
                 <div class="pro-item">
                     <div class="pro-img">
-                        <img src="./assets/img/backgound-img2.jpg" alt="...">
+                        <img src="./assets/img/wallpaper.jpg" alt="...">
                     </div>
 
                     <div class="pro-info">
