add: style: letters ProjectSection

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h1 class="title">Projetos</h1>
             <div class="divider"></div>
             <p class="sub-para"> Projetos construidos 
-              com desenvolvimento ultilizando linguagens que atualmente possuo conhecimentos. 
+              ultilizando linguagens que atualmente possuo conhecimentos. 
             </p>
 
             <div class="pro-row">
