--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <!-- Css File -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Personal Portifolio Web</title>
+    <title>Personal Portifolio</title>
 </head>
 
 <body>  
@@ -33,7 +33,7 @@
               <li><a href="#home" class="nav-link scrollto active"><i class="fa-solid fa-house"></i> <span>Inicio</span></a></li>
               <li><a href="#about" class="nav-link scrollto"><i class="fa-solid fa-user"></i> <span>Sobre mim</span></a></li>
               <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-file"></i> <span>Resumo</span></a></li>
-              <li><a href="#project" class="nav-link scrollto"><i class="fa-solid fa-briefcase"></i> <span>Projeto</span></a></li>
+              <li><a href="#project" class="nav-link scrollto"><i class="fa-solid fa-briefcase"></i> <span>Projetos</span></a></li>
               <li><a href="#contact" class="nav-link scrollto"><i class="fa-solid fa-envelope"></i> <span>Contato</span></a></li>
             </ul>
           </nav>
