--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li><a href="#about" class="nav-link scrollto"><i class="fa-solid fa-user"></i> <span>Sobre mim</span></a></li>
               <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-file"></i> <span>Resumo</span></a></li>
               <li><a href="#project" class="nav-link scrollto"><i class="fa-solid fa-briefcase"></i> <span>Projetos</span></a></li>
-              <li><a href="#contact" class="nav-link scrollto"><i class="fa-solid fa-envelope"></i> <span>Contato</span></a></li>
+              <li><a href="#contact" class="nav-link scrollto"><i class="fa-solid fa-envelope"></i> <span>Contatos</span></a></li>
             </ul>
           </nav>
 
